--- a/css/me-nxz.css
+++ b/css/me-nxz.css
@@ -1,32 +1,7 @@
-/*  Create by Fluke.NXZ 
-    http://github.com/flukejessada */
+/*  Create by Fluke.NXZ http://github.com/flukejessada */
 
-.center {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-}
-.header {
-    background-color: #ffecb3;
-    padding-top: 90px;
-}
-a.header:link {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-}
-a.header:visited {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-}
-a.header:hover {
-    color: rgb(88, 69, 15);
-    text-decoration: none;
-}
-a.header:active {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
+body {
+    background-color: #ffe082;
 }
 a.footer:link {
     font-size: 2em;
@@ -35,7 +10,6 @@ a.footer:link {
 a.footer:visited {
     color: #ffb300;
 }
-
 a.footer:hover {
     color: rgb(192, 143, 78);
     text-decoration: none;
@@ -47,12 +21,7 @@ a.footer:active {
 body, html {
     height: 100%;
 }
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+
 .overlay {
     position: absolute;
     left: 0;
@@ -69,4 +38,23 @@ body, html {
 }
 .banner-area .overlay-bg {
     background: rgba(255, 183, 77, 0.3);
+}
+.banner-area .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.me-area {
+    background-image: url(../images/abort-me.webp);
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.me-area .centered {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-100%, -50%);
 }
