--- a/css/main.scss
+++ b/css/main.scss
@@ -258,6 +258,8 @@ main {
         color: color(accent);
         font-size: 2em;
         letter-spacing: .3em;
+    }
+    h1 {
         span {
             font-family: 'Roboto';
             letter-spacing: .1em;
