--- a/css/main.css
+++ b/css/main.css
@@ -34,23 +34,13 @@ body #overlay {
   z-index: -1;
 }
 
-@media (min-width: 840px) {
-  body #overlay {
-    -webkit-clip-path: polygon(0 0, 80% 0, 60% 100%, 0% 100%);
-            clip-path: polygon(0 0, 80% 0, 60% 100%, 0% 100%);
-  }
-}
-
-body #deb {
+.deb {
   background: #F6BA53;
   width: 100%;
   height: 100%;
   position: fixed;
   margin: 0;
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   z-index: -3;
 }
 
@@ -314,7 +304,7 @@ main .glitch {
   position: relative;
   text-align: center;
   font-weight: lighter;
-  color: #ffffff;
+  color: #000000;
   font-size: 2em;
   letter-spacing: .3em;
 }
@@ -328,7 +318,7 @@ main h1 span {
 }
 
 main #subhead {
-  color: #ffffff;
+  color: #343434;
   text-align: center;
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
