--- a/src/assets/css/templatemo-style.css
+++ b/src/assets/css/templatemo-style.css
@@ -333,7 +333,7 @@ header {
 /* Hero Header by lzy3me */
 
 .header-hero {
-  background: #aeaeae;
+  background: #FFB74D;
   margin-bottom: auto !important;
   padding: 5em auto;
   height: 100vh;
